--- a/SearchPgSync/docker-compose.yaml
+++ b/SearchPgSync/docker-compose.yaml
@@ -13,7 +13,9 @@ services:
     image: redis
     command: redis-server --requirepass PLEASE_CHANGE_ME
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.13
+    build:
+      context: .
+      dockerfile: elasticsearch.dockerfile
     ports:
       - "9201:9200"
       - "9301:9300"
@@ -26,13 +28,11 @@ services:
       - /bin/bash
       - -c
       - |
-        bin/elasticsearch-plugin install --batch analysis-kuromoji
-        bin/elasticsearch-plugin install --batch analysis-icu
         /usr/local/bin/docker-entrypoint.sh
   pgsync:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: pgsync.dockerfile
     command: /bin/sh ./runserver.sh
     sysctls:
       - net.ipv4.tcp_keepalive_time=200
