--- a/.github/workflows/pgsync-synchronizer-docker-img.yml
+++ b/.github/workflows/pgsync-synchronizer-docker-img.yml
@@ -4,7 +4,8 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - 'SearchPgSync/PgSync.Dockerfile'
+      - 'SearchPgSync/pgsync.dockerfile'
+      - 'SearchPgSync/schema.json'
 
 jobs:
   build:
@@ -16,7 +17,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Build the Docker image
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/search-pgsync . -f ./PgSync.Dockerfile
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/search-pgsync . -f ./pgsync.dockerfile
 
     - name: Push the Docker image
       run: |
