--- a/K8s/ingress.yaml
+++ b/K8s/ingress.yaml
@@ -6,14 +6,6 @@ metadata:
   annotations:
     # Uncomment if deploying on Microk8s and comment line 8
     kubernetes.io/ingress.class: public
-    # kubernetes.io/ingress.class: nginx
-    # nginx.ingress.kubernetes.io/use-regex: "true"
-    # nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
-    # nginx.ingress.kubernetes.io/configuration-snippet: |
-    #   proxy_set_header Forwarded $http_forwarded;
-    #   proxy_set_header X-Forwarded-For $host;
-    #   proxy_set_header X-Forwarded-Proto https
-    #   proxy_set_header X-Forwarded-Port 443;
   labels:
     name: ingress
 
@@ -30,7 +22,7 @@ spec:
                 port:
                   number: 8080
 
-    - host: api-music.marisad.me
+    - host: api.marisad.me
       http:
         paths:
           # Music Data Service
@@ -38,42 +30,42 @@ spec:
             path: "/api/music"
             backend:
               service:
-                name: backend-clusterip
+                name: backend-api-clusterip
                 port:
                   number: 80
           - pathType: Prefix
             path: "/api/entity/circle"
             backend:
               service:
-                name: backend-clusterip
+                name: backend-api-clusterip
                 port:
                   number: 80
           - pathType: Prefix
             path: "/api/asset"
             backend:
               service:
-                name: backend-clusterip
+                name: backend-api-clusterip
                 port:
                   number: 80
           - pathType: Prefix
             path: "/api/source"
             backend:
               service:
-                name: backend-clusterip
+                name: backend-api-clusterip
                 port:
                   number: 80
           - pathType: Prefix
             path: "/api/playlist"
             backend:
               service:
-                name: backend-clusterip
+                name: backend-api-clusterip
                 port:
                   number: 80
           - pathType: Prefix
             path: "/api/playlistItem"
             backend:
               service:
-                name: backend-clusterip
+                name: backend-api-clusterip
                 port:
                   number: 80
 
@@ -82,7 +74,7 @@ spec:
             path: "/api/search"
             backend:
               service:
-                name: backend-clusterip
+                name: backend-api-clusterip
                 port:
                   number: 80
 
@@ -91,7 +83,7 @@ spec:
             path: "/api/user"
             backend:
               service:
-                name: backend-clusterip
+                name: backend-api-clusterip
                 port:
                   number: 80
 
@@ -100,6 +92,6 @@ spec:
             path: "/swagger"
             backend:
               service:
-                name: backend-clusterip
+                name: backend-api-clusterip
                 port:
                   number: 80
