--- a/TlmcPlayerBackend/TlmcPlayerBackend.csproj
+++ b/TlmcPlayerBackend/TlmcPlayerBackend.csproj
@@ -22,6 +22,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+    <PackageReference Include="Mime-Detective" Version="24.5.1" />
+    <PackageReference Include="Mime-Detective.Definitions.Condensed" Version="24.5.1" />
+    <PackageReference Include="Mime-Detective.Definitions.Exhaustive" Version="24.5.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
